solc_ossfuzz_seed_corpus/test_sol/test_c90058f2d5a57de2734937e0ca57d21dfea4c3b82072ca0bfee15cf36aa65cba_ae9430fcb7b0560e33d1596843401218571c889c_sol.sol
==== Source:  ====

==== Source: su0.sol ====
pragma solidity >= 0.0.0;
library L0 {
  function f0(int56 i0,bytes18 i1) public    returns(address payable o0,bytes17 o1)
  {
  }
  function f1(bool[] memory i0,uint184 i1) internal    returns(function (int192, function (uint112) internal   returns (function (address, bytes25, bytes26) external   returns (function (address, int40, int192) external  , bytes15, function () external   returns (function (function (uint48, uint88[2] memory) internal   returns (bytes16), bytes memory) internal   returns (function () external   returns (uint208), address payable), address)), int144), uint80) internal   o0)
  {
    assembly
    {
      i0 := 0
      i1 := i1
      function af0(ai0, ai1, ai2, ai3, ai4, ai5, ai6, ai7, ai8, ai9) -> ao0, ao1, ao2, ao3, ao4, ao5, ao6, ao7, ao8, ao9, ao10, ao11, ao12, ao13
      {
        ao8 := ai6
        revert(mod(23848031897572097424674946343035144373382450036382517644797436006486617395669, 0), 115792089237316195423570985008687907853269984665640564039457584007913129639935)
      }
    }
  }
}
using L0 for uint;
type T0 is bool;
using L0 for uint;
// ----
// TypeError 2582: (su0.sol:395-564): Internal type cannot be used for external function type.
